--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,6 @@ workflows:
     init:
       jobs:
         - checkout
-        - build
+        - build:
             requires:
               - checkout
