--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - run: sed -i "s/#aws_secret_access_key#/$SECRET_ACCESS_KEY/" /home/node/.aws/credentials
       - run: cat /home/node/.aws/credentials
       - run: cat /home/node/.ask/cli_config
-      - run: ask deploy
+      - run: ask deploy --debug
       - persist_to_workspace:
           root: /home/node/
           paths:
