--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
       - run: sed -i "s/#aws_secret_access_key#/$SECRET_ACCESS_KEY/" /home/node/.aws/credentials
       - run: cat /home/node/.aws/credentials
       - run: cat /home/node/.ask/cli_config
+      - run: export ASK_DEFAULT_PROFILE=""
       - run: ask deploy --debug
       - persist_to_workspace:
           root: /home/node/
