--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -4,7 +4,9 @@
   "description": "Alexa HelloWorld example with NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "lint": "eslint . --format junit --output-file eslint.xml",
+    "lint-fix": "eslint --fix .",
+    "test": "mocha test/helloworld-tests.js --reporter mocha-junit-reporter"
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,15 @@
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
-    "i18next": "^15.0.5"
+    "i18next": "^15.0.5",
+    "i18next-sprintf-postprocessor": "^0.2.2"
+  },
+  "devDependencies": {
+    "alexa-skill-test-framework": "^1.2.4",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-strongloop": "^2.1.0",
+    "mocha": "^7.1.2",
+    "mocha-junit-reporter": "^1.23.3"
   }
 }
