added src folder

--- a/.ask/config
+++ b/.ask/config
@@ -20,7 +20,7 @@
             ],
             "arn": "arn:aws:lambda:us-east-1:141568529918:function:ask-custom-alexa-nodejs-lambda-helloworld-default",
             "awsRegion": "us-east-1",
-            "codeUri": "lambda/custom",
+            "codeUri": "lambda/custom/src",
             "functionName": "ask-custom-alexa-nodejs-lambda-helloworld-default",
             "handler": "index.handler",
             "revisionId": "95af68b3-fbbe-473e-9543-07e55c7a6797",
@@ -49,7 +49,7 @@
             ],
             "arn": "arn:aws:lambda:us-east-1:141568529918:function:ask-custom-alexa-nodejs-lambda-helloworld-default",
             "awsRegion": "us-east-1",
-            "codeUri": "lambda/custom",
+            "codeUri": "lambda/custom/src",
             "functionName": "ask-custom-alexa-nodejs-lambda-helloworld-default",
             "handler": "index.handler",
             "revisionId": "f4f6cd2b-ae8f-4050-acd5-5bc949a819aa",
