--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint . --format junit --output-file eslint.xml",
     "lint-fix": "eslint --fix .",
-    "test": "mocha test/helloworld-tests.js --reporter mocha-junit-reporter"
+    "test": "mocha --reporter mocha-junit-reporter",
+    "build-production": "cpy package.json src && cd src/ && npm install --production"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "eslint": "^6.8.0",
     "eslint-config-strongloop": "^2.1.0",
     "mocha": "^7.1.2",
-    "mocha-junit-reporter": "^1.23.3"
+    "mocha-junit-reporter": "^1.23.3",
+    "cpy-cli": "^3.1.0"
   }
 }
