--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,8 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: npm run build-production
+      - run: cd lambda/custom && npm run copy-package
+      - run: cd lambda/custom/src && npm run build-production
       - run: ask deploy --debug --force
       - persist_to_workspace:
           root: /home/node/
