--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint . --format junit --output-file eslint.xml",
     "lint-fix": "eslint --fix .",
-    "test": "mocha --reporter mocha-junit-reporter",
+    "test": "mocha --reporter mocha-multi-reporters --reporter-options configFile=mocha.json",
     "copy-package": "cpy package.json src/",
     "build-production": "npm install --production",
     "build": "npm run copy-package && cd src/ && npm run build-production"
@@ -27,10 +27,12 @@
   "devDependencies": {
     "alexa-skill-test-framework": "^1.2.4",
     "chai": "^4.2.0",
+    "cpy-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-strongloop": "^2.1.0",
     "mocha": "^7.1.2",
     "mocha-junit-reporter": "^1.23.3",
-    "cpy-cli": "^3.1.0"
+    "mocha-multi-reporters": "^1.1.7",
+    "mochawesome": "^6.1.1"
   }
 }
