--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           at: /home/node/
       - run: cd lambda/custom && npm run lint
       - store_test_results:
-          path: lambda/custom/
+          path: lambda/custom/reports/eslint/
       - persist_to_workspace:
           root: /home/node/
           paths:
@@ -43,10 +43,9 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: rm -rf lambda/custom/eslint.xml
       - run: cd lambda/custom && npm run test
       - store_test_results:
-          path: lambda/custom/
+          path: lambda/custom/reports/mocha/
       - persist_to_workspace:
           root: /home/node/
           paths:
