--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --format junit --output-file reports/eslint/eslint.xml",
+    "lint-html": "eslint . -f node_modules/eslint-detailed-reporter/lib/detailed.js -o reports/eslint/report.html",
     "lint-fix": "eslint --fix .",
     "test": "mocha --reporter mocha-multi-reporters --reporter-options configFile=mocha.json",
     "copy-package": "cpy package.json src/",
@@ -30,6 +31,7 @@
     "cpy-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-strongloop": "^2.1.0",
+    "eslint-detailed-reporter": "^0.8.0",
     "mocha": "^7.1.2",
     "mocha-junit-reporter": "^1.23.3",
     "mocha-multi-reporters": "^1.1.7",
