--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,10 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: cd lambda/custom && npm run lint; npm run lint-html
+      - run: cd lambda/custom && npm run lint
+      - run: 
+          command: cd lambda/custom && npm run lint-html
+          when: always
       - store_test_results:
           path: lambda/custom/reports/eslint/
       - store_artifacts:
