--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,16 @@ jobs:
           root: /home/node/
           paths:
             - project
+  codecov:
+    executor: ask-executor
+    steps:
+      - attach_workspace:
+          at: /home/node/
+      - run: cd lambda/custom && npm run codecov
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
   pretest:
     executor: ask-executor
     steps:
@@ -85,9 +95,12 @@ workflows:
         - build:
             requires:
               - checkout
-        - pretest:
+        - codecov:
             requires:
               - build
+        - pretest:
+            requires:
+              - codecov
         - test:
             requires:
               - pretest
