--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint . --format junit --output-file reports/eslint/eslint.xml",
     "lint-html": "eslint . -f node_modules/eslint-detailed-reporter/lib/detailed.js -o reports/eslint/report.html",
     "lint-fix": "eslint --fix .",
+    "codecov": "nyc report --reporter=text-lcov | codecov --pipe",
     "test": "mocha --reporter mocha-multi-reporters --reporter-options configFile=mocha.json",
     "copy-package": "cpy package.json src/",
     "build-production": "npm install --production",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "alexa-skill-test-framework": "^1.2.4",
     "chai": "^4.2.0",
+    "codecov": "^3.6.5",
     "cpy-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-strongloop": "^2.1.0",
@@ -35,6 +37,7 @@
     "mocha": "^7.1.2",
     "mocha-junit-reporter": "^1.23.3",
     "mocha-multi-reporters": "^1.1.7",
-    "mochawesome": "^6.1.1"
+    "mochawesome": "^6.1.1",
+    "nyc": "^15.0.1"
   }
 }
