--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,16 +26,6 @@ jobs:
           root: /home/node/
           paths:
             - project
-  codecov:
-    executor: ask-executor
-    steps:
-      - attach_workspace:
-          at: /home/node/
-      - run: cd lambda/custom && npm run codecov
-      - persist_to_workspace:
-          root: /home/node/
-          paths:
-            - project
   pretest:
     executor: ask-executor
     steps:
@@ -63,6 +53,16 @@ jobs:
           path: lambda/custom/reports/mocha/
       - store_artifacts:
           path: ./lambda/custom/mochawesome-report/
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
+  codecov:
+    executor: ask-executor
+    steps:
+      - attach_workspace:
+          at: /home/node/
+      - run: cd lambda/custom && npm run codecov
       - persist_to_workspace:
           root: /home/node/
           paths:
@@ -95,15 +95,15 @@ workflows:
         - build:
             requires:
               - checkout
-        - codecov:
-            requires:
-              - build
         - pretest:
             requires:
-              - codecov
+              - build
         - test:
             requires:
               - pretest
+        - codecov:
+            requires:
+              - test
         - deploy:
             requires:
               - test
