--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,12 +57,12 @@ jobs:
           root: /home/node/
           paths:
             - project
-  codecov:
+  coveralls:
     executor: ask-executor
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: cd lambda/custom && npm run codecov
+      - run: cd lambda/custom && npm run coveralls
       - persist_to_workspace:
           root: /home/node/
           paths:
@@ -101,7 +101,7 @@ workflows:
         - test:
             requires:
               - pretest
-        - codecov:
+        - coveralls:
             requires:
               - test
         - deploy:
