--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --format junit --output-file reports/eslint/eslint.xml",
     "lint-html": "eslint . -f node_modules/eslint-detailed-reporter/lib/detailed.js -o reports/eslint/report.html",
     "lint-fix": "eslint --fix .",
-    "codecov": "nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && codecov -y codecon.yml",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test": "mocha --reporter mocha-multi-reporters --reporter-options configFile=mocha.json",
     "copy-package": "cpy package.json src/",
     "build-production": "npm install --production",
@@ -29,7 +29,7 @@
   "devDependencies": {
     "alexa-skill-test-framework": "^1.2.4",
     "chai": "^4.2.0",
-    "codecov": "^3.6.5",
+    "coveralls": "^3.1.0",
     "cpy-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-strongloop": "^2.1.0",
