--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,7 +129,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: cd test/integration-test/ && ./skill_validation_checker.sh $SKILL_ID
+      - run: cd test/validation-test/ && ./skill_validation_checker.sh $SKILL_ID
       - persist_to_workspace:
           root: /home/node/
           paths:
@@ -180,6 +180,10 @@ workflows:
         - validation-test:
             requires:
               - end-to-end-test
-        - store-artifacts:
+        - wait-for-decision:
+            type: approval
             requires:
               - validation-test
+        - store-artifacts:
+            requires:
+              - wait-for-decision
