--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: cd test/integration-test/ && ./simple-dialog-checker.sh $SKILL_ID v1
+      - run: cd test/integration-test/ && ./simple-dialog-checker.sh $SKILL_ID
       - persist_to_workspace:
           root: /home/node/
           paths:
@@ -129,7 +129,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/node/
-      - run: cd test/validation-test/ && ./skill_validation_checker.sh $SKILL_ID
+      - run: cd test/validation-test/ && ./skill_validation_checker.sh $SKILL_ID v1
       - persist_to_workspace:
           root: /home/node/
           paths:
